<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006CD1"
    tools:context=".PersonRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/google_map"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.FindPerson.Title"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registra en nuestro sistema\n a la persona desaparecida"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.FindPerson.Text"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_marginBottom="15dp"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:textColor="@color/black"
                android:text="Cargar"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCode"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:hint="El Codigo se genera automaticamente"
                android:enabled="false"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="75"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="75"
                    android:maxLines="1"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:hint="@string/person_name"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="75"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="75"
                    android:maxLines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAge"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:hint="@string/person_age"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="75"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:startIconDrawable="@drawable/ic_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietAge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="75"
                    android:maxLines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHeight"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:hint="@string/person_height"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="75"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:startIconDrawable="@drawable/ic_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="75"
                    android:maxLines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWeight"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:hint="@string/person_weight"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="75"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:startIconDrawable="@drawable/ic_weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="75"
                    android:maxLines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDirection"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:hint="@string/person_direction"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:startIconDrawable="@drawable/ic_weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="75"
                    android:maxLines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="Recuerda colocar todos los datos de la \npersona para que pueda ser identificada"
                android:textAppearance="@style/TextAppearance.FindPerson.Text"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>